assign3/out.txt
make -C /lib/modules/3.13.0-45-generic/build M=/home/student/Repositories/5460/assign3 modules
make[1]: Entering directory `/usr/src/linux-headers-3.13.0-45-generic'
  CC [M]  /home/student/Repositories/5460/assign3/sleepy.o
/home/student/Repositories/5460/assign3/sleepy.c: In function ‘sleepy_write’:
/home/student/Repositories/5460/assign3/sleepy.c:123:3: warning: ISO C90 forbids mixed declarations and code [-Wdeclaration-after-statement]
   struct sleepy_dev *dev = (struct sleepy_dev *)filp->private_data;
   ^
In file included from include/linux/mmzone.h:9:0,
                 from include/linux/gfp.h:4,
                 from include/linux/kmod.h:22,
                 from include/linux/module.h:13,
                 from /home/student/Repositories/5460/assign3/sleepy.c:18:
include/linux/wait.h:307:31: error: ‘TASK_INTERRUPTIBLE’ undeclared (first use in this function)
  ___wait_event(wq, condition, TASK_INTERRUPTIBLE, 0, 0,  \
                               ^
include/linux/wait.h:207:52: note: in definition of macro ‘___wait_event’
   long __int = prepare_to_wait_event(&wq, &__wait, state);\
                                                    ^
include/linux/wait.h:329:11: note: in expansion of macro ‘__wait_event_interruptible’
   __ret = __wait_event_interruptible(wq, condition); \
           ^
/home/student/Repositories/5460/assign3/sleepy.c:141:3: note: in expansion of macro ‘wait_event_interruptible’
   wait_event_interruptible(wq, flag != 0);
   ^
include/linux/wait.h:307:31: note: each undeclared identifier is reported only once for each function it appears in
  ___wait_event(wq, condition, TASK_INTERRUPTIBLE, 0, 0,  \
                               ^
include/linux/wait.h:207:52: note: in definition of macro ‘___wait_event’
   long __int = prepare_to_wait_event(&wq, &__wait, state);\
                                                    ^
include/linux/wait.h:329:11: note: in expansion of macro ‘__wait_event_interruptible’
   __ret = __wait_event_interruptible(wq, condition); \
           ^
/home/student/Repositories/5460/assign3/sleepy.c:141:3: note: in expansion of macro ‘wait_event_interruptible’
   wait_event_interruptible(wq, flag != 0);
   ^
include/linux/wait.h:192:43: error: ‘TASK_KILLABLE’ undeclared (first use in this function)
   state == TASK_INTERRUPTIBLE || state == TASK_KILLABLE) \
                                           ^
include/linux/wait.h:212:7: note: in expansion of macro ‘___wait_is_interruptible’
   if (___wait_is_interruptible(state) && __int) {  \
       ^
include/linux/wait.h:307:2: note: in expansion of macro ‘___wait_event’
  ___wait_event(wq, condition, TASK_INTERRUPTIBLE, 0, 0,  \
  ^
include/linux/wait.h:329:11: note: in expansion of macro ‘__wait_event_interruptible’
   __ret = __wait_event_interruptible(wq, condition); \
           ^
/home/student/Repositories/5460/assign3/sleepy.c:141:3: note: in expansion of macro ‘wait_event_interruptible’
   wait_event_interruptible(wq, flag != 0);
   ^
/home/student/Repositories/5460/assign3/sleepy.c:141:3: error: implicit declaration of function ‘schedule’ [-Werror=implicit-function-declaration]
cc1: some warnings being treated as errors
make[2]: *** [/home/student/Repositories/5460/assign3/sleepy.o] Error 1
make[1]: *** [_module_/home/student/Repositories/5460/assign3] Error 2
make[1]: Leaving directory `/usr/src/linux-headers-3.13.0-45-generic'
make: *** [all] Error 2
